--- a/package.json
+++ b/package.json
@@ -2,4 +2,5 @@
 	"name": "chat-client",
 	"version": "0.1.0",
 	"private": true,
-	"depend
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.17.
