--- a/package.json
+++ b/package.json
@@ -3,4 +3,5 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.17.
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "
