--- a/package.json
+++ b/package.json
@@ -4,4 +4,5 @@
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13
