--- a/package.json
+++ b/package.json
@@ -7,4 +7,5 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.5.2",
-		"@types/node
+		"@types/node": "^16.18.61",
+		"@types/react": "^18.2
