--- a/package.json
+++ b/package.json
@@ -8,4 +8,6 @@
 		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.5.2",
 		"@types/node": "^16.18.61",
-		"@types/react": "^18.2
+		"@types/react": "^18.2.37",
+		"@types/react-dom": "^18.2.15",
+		
