--- a/package.json
+++ b/package.json
@@ -16,4 +16,5 @@
 		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-scrip
+		"react-scripts": "5.0.1",
+		"typescript": "^4.9.5",
