--- a/package.json
+++ b/package.json
@@ -23,4 +23,5 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scr
+		"test": "react-scripts test",
+		"eject": "react-sc
