--- a/package.json
+++ b/package.json
@@ -41,4 +41,8 @@
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
-			"last 1 safari versi
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@typ
