Update version to 1.1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,4 +10,5 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "stri
+    "strict": true,
+    "forceConsistentCasingInFileNames
