--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,4 +14,6 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
-    "moduleResolution": "no
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolated
